# llama.cpp-tray

./: .gitignore  CMakeLists.txt  README.md  llama-cpp-tray.desktop
resources/: resources.qrc
src/: main.cpp
translations/: en.json  ru.json
